[gd_scene load_steps=7 format=3 uid="uid://cjr3qgwjg1kys"]

[ext_resource type="Script" path="res://Scripts/AddEntryBtn.gd" id="1_81hu5"]
[ext_resource type="StyleBox" uid="uid://cg4odcwiqmxwk" path="res://Other/AddEntryNormalStylebox.tres" id="2_f1lru"]
[ext_resource type="Texture2D" uid="uid://bb33vcvjgbovs" path="res://Assets/RemoveIcon.png" id="2_uk14x"]
[ext_resource type="Texture2D" uid="uid://m8aj56bksd32" path="res://Assets/RemoveIcon_Pressed.png" id="3_31p0m"]
[ext_resource type="Texture2D" uid="uid://bx5u42o4cykec" path="res://Assets/RemoveIcon_Hovered.png" id="4_dfwnd"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_lg5s0"]

[node name="AddEntryButton" type="Button"]
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(155, 62)
offset_right = 155.0
offset_bottom = 55.0
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_default_cursor_shape = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_lg5s0")
shortcut_feedback = false
shortcut_in_tooltip = false
script = ExtResource("1_81hu5")

[node name="Background" type="PanelContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = ExtResource("2_f1lru")

[node name="Container" type="HBoxContainer" parent="Background"]
layout_mode = 2

[node name="Text" type="Label" parent="Background/Container"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
size_flags_horizontal = 3
text = " Placeholder "
horizontal_alignment = 1
vertical_alignment = 1

[node name="Void" type="Panel" parent="Background/Container"]
unique_name_in_owner = true
visible = false
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(3, 0)
layout_mode = 2
mouse_filter = 2

[node name="RemoveBtn" type="TextureButton" parent="Background/Container"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
mouse_default_cursor_shape = 2
texture_normal = ExtResource("2_uk14x")
texture_pressed = ExtResource("3_31p0m")
texture_hover = ExtResource("4_dfwnd")
ignore_texture_size = true
stretch_mode = 5

[node name="PressedTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.5
one_shot = true

[connection signal="mouse_entered" from="." to="." method="mouse_moved" binds= [true]]
[connection signal="mouse_exited" from="." to="." method="mouse_moved" binds= [false]]
[connection signal="pressed" from="." to="." method="main_pressed"]
[connection signal="pressed" from="Background/Container/RemoveBtn" to="." method="remove_pressed"]
